# file-replicator

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  README.md  build.sh  config.schema.json  file-replicator-state.db-shm  file-replicator-state.db-wal  gdk-config.json  recipe.yaml
.github/workflows/: ci.yml
docs/: README.md  explanation.md  how-to-guides.md  sample-configurations.md  tutorial.md
docs/reference/: configuration.md  data-types.md  destinations.md  messaging-interface.md  metrics.md
k8s/: configmap.yaml  deployment.yaml
src/: admission.rs  app.rs  config.rs  control.rs  domain.rs  error.rs  events.rs  integrity.rs  lib.rs  main.rs  metrics.rs  permission.rs  ratelimit.rs  readiness.rs  state.rs  uns.rs
src/dest/: local.rs  mod.rs
src/dest/azure/: client.rs  mod.rs
src/dest/ftps/: client.rs  mod.rs
src/dest/gcs/: client.rs  mod.rs
src/dest/http/: client.rs  mod.rs
src/dest/s3/: client.rs  mod.rs
src/dest/sftp/: client.rs  mod.rs
src/instance/: mod.rs  queue.rs  watcher.rs  worker.rs
src/schedule/: cron.rs  mod.rs  sugar.rs  window.rs
test-configs/: config.json  standalone-messaging.json
tests/: azure_azurite.rs  gcs_fakegcs.rs  http_inprocess.rs  p1_engine.rs  p3_control_emqx.rs  p6_fanout.rs  s3_floci.rs  s3_real.rs  sftp_atmoz.rs
