[package]
name = "file-replicator"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "EdgeCommons file-replicator: watches directories and replicates files to local/S3 (and, phased, SFTP/HTTP/Azure/GCS) on arrival or on cron schedules/windows, with resumable uploads, integrity verification, bandwidth caps, per-instance activation, and a full control/event surface. See DESIGN.md."
publish = false

[[bin]]
name = "file-replicator"
path = "src/main.rs"

# Runtime selection mirrors the ggcommons library (and telemetry-processor):
#   - `standalone` (default): dual-broker MQTT — HOST/containers, no C-FFI IPC. Use for `cargo run`/`cargo test`.
#   - `greengrass`: Greengrass IPC — the on-device build. Linux-only (C-FFI SDK); `build.sh` opts in.
#
# NOTE: this is the P0 scaffold feature set. Per DESIGN §22.2, later phases add:
#   dest-s3 (P2, joins `default`), dest-sftp/dest-http (P5), dest-azure/dest-gcs (P5, off by default),
#   and `state-redb` (pure-Rust durable-state fallback to the default bundled SQLite). They are added to
#   this block as each phase lands, so the P0 build stays light and toolchain-free.
[features]
default = ["standalone", "dest-s3"]
standalone = ["ggcommons/standalone"]
greengrass = ["ggcommons/greengrass"]
cloudwatch = ["ggcommons/cloudwatch"]
# P2 — S3 destination (DESIGN §11, §22.2). Pulls the pure-Rust (rustls) AWS SDK + the ggcommons
# credentials subsystem (base `credentials` feature — pure local vault; NOT `credentials-aws`) so an
# egress `{"$secret":"..."}` resolves through `gg.credentials()` → `get_aws_credentials`. Joins the
# default feature set per DESIGN §22.2 (batteries-included; immature backends stay off).
dest-s3 = ["dep:aws-sdk-s3", "dep:aws-config", "dep:base64", "ggcommons/credentials"]

[dependencies]
# ggcommons Rust library, pinned to a commit on edgecommons/ggcommons (private). Building standalone needs
# read access to that repo. The fetch goes through the git CLI (see .cargo/config.toml); locally use your
# gh/git credential helper, and CI's reusable workflow rewrites the https URL with EDGECOMMONS_READ_TOKEN.
# For local development against the sibling checkout, the gitignored .cargo/config.toml `paths` override
# points cargo at ../ggcommons/libs/rust (Windows + WSL) — no Cargo.toml edit needed.
ggcommons = { git = "https://github.com/edgecommons/ggcommons.git", rev = "cc037a92c1780c3d88cc98885cfdefec0403a898", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"

# --- P1 core deps (non-optional; DESIGN §13/§14 + blueprint) -----------------------------------
# Durable state: SQLite in WAL mode, statically bundled (the Windows/Linux C toolchain is present).
rusqlite = { version = "0.32", features = ["bundled"] }
# Live filesystem watch (engine); the deterministic scan()/readiness path uses globset directly.
notify = "6"
# Glob include/exclude + readiness matching.
globset = "0.4"
# Streaming integrity checksums (CRC32C default, SHA-256 optional).
crc32c = "0.6"
sha2 = "0.10"
# Component-internal typed errors with transient/permanent classification.
thiserror = "1"
# Full-jitter backoff (retry) with an injectable RNG.
rand = "0.8"
# CancellationToken for cooperative task shutdown.
tokio-util = { version = "0.7", features = ["rt"] }
# RFC3339 event/state timestamps (P3 control plane); same crate + version ggcommons uses for the
# message-envelope timestamp, so features unify with no lock churn.
time = { version = "0.3", features = ["formatting"] }

# --- P4 scheduling deps (non-optional; DESIGN §12) ----------------------------------------------
# Cron-first scheduling: croner is generic over `chrono::TimeZone`, so cron fires are computed IN
# the configured tz (DST-aware) via chrono-tz, then mapped back to Utc. Pure-Rust, Windows-clean.
croner = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"

# --- P2 S3 destination deps (optional; gated by `dest-s3`, DESIGN §22.2) ------------------------
# Same 1.x line ggcommons uses for kinesis/cloudwatch; pure-Rust (rustls) — no extra toolchain.
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
# S3 flexible-checksum header codec (4-byte-BE CRC32C / 32-byte SHA-256 → base64).
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3"
# `test-util` enables paused-time tests (deterministic bandwidth-throttle assertions, no real sleeps).
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
# Integration tests (`tests/`) implement a fake/failing `Destination` (async-trait), read the
# quarantine `.error.json` sidecar (serde_json), and drive `Instance::run` (CancellationToken).
async-trait = "0.1"
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
