[package]
name = "file-replicator"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "EdgeCommons file-replicator: watches directories and replicates files to local/S3 (and, phased, SFTP/HTTP/Azure/GCS) on arrival or on cron schedules/windows, with resumable uploads, integrity verification, bandwidth caps, per-instance activation, and a full control/event surface. See DESIGN.md."
publish = false

[[bin]]
name = "file-replicator"
path = "src/main.rs"

# Runtime selection mirrors the ggcommons library (and telemetry-processor):
#   - `standalone` (default): dual-broker MQTT — HOST/containers, no C-FFI IPC. Use for `cargo run`/`cargo test`.
#   - `greengrass`: Greengrass IPC — the on-device build. Linux-only (C-FFI SDK); `build.sh` opts in.
#
# NOTE: this is the P0 scaffold feature set. Per DESIGN §22.2, later phases add:
#   dest-s3 (P2, joins `default`), dest-sftp/dest-http (P5), dest-azure/dest-gcs (P5, off by default),
#   and `state-redb` (pure-Rust durable-state fallback to the default bundled SQLite). They are added to
#   this block as each phase lands, so the P0 build stays light and toolchain-free.
[features]
default = ["standalone", "dest-s3"]
standalone = ["ggcommons/standalone"]
greengrass = ["ggcommons/greengrass"]
cloudwatch = ["ggcommons/cloudwatch"]
# P2 — S3 destination (DESIGN §11, §22.2). Pulls the pure-Rust (rustls) AWS SDK + the ggcommons
# credentials subsystem (base `credentials` feature — pure local vault; NOT `credentials-aws`) so an
# egress `{"$secret":"..."}` resolves through `gg.credentials()` → `get_aws_credentials`. Joins the
# default feature set per DESIGN §22.2 (batteries-included; immature backends stay off).
dest-s3 = [
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:base64",
    "dep:aws-smithy-types",
    "dep:http-body",
    "dep:http",
    "dep:async-stream",
    "dep:futures-core",
    "dep:bytes",
    "ggcommons/credentials",
]
# P5 — SFTP destination (DESIGN §10.3, §22.2). Pure-Rust SSH (`russh`/`russh-sftp` — no C toolchain),
# so it stays Windows-clean like the rest of the P5 backends. Off by default (joins the build only when
# asked); the ggcommons credentials subsystem resolves an optional `{"$secret":"..."}` egress override.
dest-sftp = ["dep:russh", "dep:russh-sftp", "ggcommons/credentials"]
# P5 — FTPS destination (DESIGN §10.3, §22.2). `suppaftp` pinned to the `=6` line (the `10.x` line needs
# rustc 1.88, above this crate's 1.85 MSRV) with the rustls TLS feature — no OpenSSL/C toolchain.
dest-ftps = ["dep:suppaftp", "dep:rustls", "dep:rustls-native-certs", "ggcommons/credentials"]
# P5 — HTTP(S) destination (DESIGN §10.2/§10.3, §22.2). `reqwest` with rustls (no OpenSSL/C toolchain);
# resume is a sequence of ranged `PUT`s (`Content-Range`), so no streaming-body/extra async-stream crate
# is needed — see `dest/http/mod.rs`. The ggcommons credentials subsystem resolves an optional
# `{"$secret":"..."}` egress override (bearer token or basic auth).
dest-http = ["dep:reqwest", "ggcommons/credentials"]
# P5 — Azure Blob destination (DESIGN §10.2/§10.3, §22.2). `azure_storage_blobs`/`azure_storage`/
# `azure_core` — a younger SDK line (the "legacy" azure-sdk-for-rust track), so kept OFF by default
# (crate-maturity risk contained behind the `dest-azure` feature + `dest/azure/client.rs` coverage
# seam, DESIGN §22.2). `enable_reqwest_rustls`+`hmac_rust` keep it pure-Rust (no OpenSSL/C toolchain),
# matching the rest of this crate's TLS story. The ggcommons credentials subsystem resolves an optional
# `{"$secret":"..."}` egress override (account key or connection string).
dest-azure = ["dep:azure_storage_blobs", "dep:azure_storage", "dep:azure_core", "dep:futures", "ggcommons/credentials"]
# P5 — GCS destination (DESIGN §10.2/§10.3, §22.2). GCS's resumable-upload protocol is plain HTTP
# (initiate a session → chunked `PUT`s with `Content-Range`, checkpointed by persisting the session
# URI), so this backend drives it directly over the same `reqwest` (rustls) client `dest-http` already
# uses rather than pulling in the `google-cloud-storage`/`object_store` crates — avoiding a second
# immature SDK's auth/dependency surface while still keeping every network call isolated behind
# `dest/gcs/client.rs` (crate-maturity risk containment, DESIGN §22.2). `dep:reqwest`/`dep:base64` are
# shared with `dest-http`/`dest-s3`'s optional deps (Cargo allows one optional dep gated by several
# features). `reqwest/json` (a weak-dependency feature, only enabled when `dest-gcs` itself is — it
# does not affect a `dest-http`-only build) turns on typed JSON responses for the object-metadata
# `verify` call. Off by default (crate-maturity posture, matching `dest-azure`). The ggcommons
# credentials subsystem resolves an optional `{"$secret":"..."}` egress override (an OAuth2 access
# token).
dest-gcs = ["dep:reqwest", "reqwest/json", "dep:base64", "ggcommons/credentials"]

[dependencies]
# ggcommons Rust library, pinned to a commit on edgecommons/ggcommons (private). Building standalone needs
# read access to that repo. The fetch goes through the git CLI (see .cargo/config.toml); locally use your
# gh/git credential helper, and CI's reusable workflow rewrites the https URL with EDGECOMMONS_READ_TOKEN.
# For local development against the sibling checkout, the gitignored .cargo/config.toml `paths` override
# points cargo at ../ggcommons/libs/rust (Windows + WSL) — no Cargo.toml edit needed.
ggcommons = { git = "https://github.com/edgecommons/ggcommons.git", rev = "cc037a92c1780c3d88cc98885cfdefec0403a898", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"

# --- P1 core deps (non-optional; DESIGN §13/§14 + blueprint) -----------------------------------
# Durable state: SQLite in WAL mode, statically bundled (the Windows/Linux C toolchain is present).
rusqlite = { version = "0.32", features = ["bundled"] }
# Live filesystem watch (engine); the deterministic scan()/readiness path uses globset directly.
notify = "6"
# Glob include/exclude + readiness matching.
globset = "0.4"
# Streaming integrity checksums (CRC32C default, SHA-256 optional).
crc32c = "0.6"
sha2 = "0.10"
# Component-internal typed errors with transient/permanent classification.
thiserror = "1"
# Full-jitter backoff (retry) with an injectable RNG.
rand = "0.8"
# CancellationToken for cooperative task shutdown.
tokio-util = { version = "0.7", features = ["rt"] }
# RFC3339 event/state timestamps (P3 control plane); same crate + version ggcommons uses for the
# message-envelope timestamp, so features unify with no lock churn.
time = { version = "0.3", features = ["formatting"] }

# --- P4 scheduling deps (non-optional; DESIGN §12) ----------------------------------------------
# Cron-first scheduling: croner is generic over `chrono::TimeZone`, so cron fires are computed IN
# the configured tz (DST-aware) via chrono-tz, then mapped back to Utc. Pure-Rust, Windows-clean.
croner = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"

# --- P2 S3 destination deps (optional; gated by `dest-s3`, DESIGN §22.2) ------------------------
# Same 1.x line ggcommons uses for kinesis/cloudwatch; pure-Rust (rustls) — no extra toolchain.
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
# S3 flexible-checksum header codec (4-byte-BE CRC32C / 32-byte SHA-256 → base64).
base64 = { version = "0.22", optional = true }
# Streaming upload body (peak-RSS fix): `aws-sdk-s3` re-exports `aws-smithy-types` at whatever version
# it pins, but we need `SdkBody::from_body_0_4`/`ByteStream::from_body_0_4` as *our* API surface to wrap
# a custom range-reading `http_body::Body` — so it's a direct dep here too, with the `http-body-0-4-x`
# feature (bridges the older `http-body` 0.4 body trait used by this SDK's HTTP stack) and `rt-tokio`
# (path-based `ByteStream` helpers used by unit tests). `http-body`/`http` 0.4/0.2 are the exact
# transitive versions `aws-smithy-types`'s `http-body-0-4-x` feature resolves — a direct dep on the same
# crate+version is unified by cargo, not a second copy, so `dest/s3/mod.rs` can `impl http_body::Body`
# for its custom range-streaming body. `async-stream`+`futures-core` build that body as an async
# generator (`try_stream!`) over chunked `tokio::fs::File` reads instead of a hand-rolled poll state
# machine; `bytes` is the `Body::Data` the SDK expects. All pure-Rust, Windows-clean.
aws-smithy-types = { version = "1", features = ["http-body-0-4-x", "rt-tokio"], optional = true }
http-body = { version = "0.4", optional = true }
http = { version = "0.2", optional = true }
async-stream = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

# --- P5 SFTP destination deps (optional; gated by `dest-sftp`, DESIGN §22.2) ---------------------
# Pure-Rust SSH client + SFTP subsystem — no C toolchain, builds clean on Windows/MSVC like the rest
# of this crate. `russh`'s default crypto backend (`aws-lc-rs`) is already resolved in this workspace
# via the S3 SDK's rustls stack, so it adds no new native build surface.
russh = { version = "0.61", optional = true }
russh-sftp = { version = "2", optional = true }

# --- P5 FTPS destination deps (optional; gated by `dest-ftps`, DESIGN §22.2) ---------------------
# Pinned to the `=6` line: `suppaftp` 10.x raises the MSRV above this crate's 1.85 floor. The crate's
# `async` feature runs on `async-std`, not `tokio` — pulling in a second executor is the wrong tradeoff
# for one backend, so `dest/ftps/client.rs` uses the **synchronous** `rustls` feature (pure-Rust TLS,
# no OpenSSL) through `tokio::task::spawn_blocking`, the same pattern `local.rs`/`s3` use for blocking
# hash work (bandwidth-governor waits are driven back in via `Handle::block_on` from that blocking
# thread, so throttling stays correct without an async suppaftp API).
suppaftp = { version = "=6.3.0", default-features = false, features = ["rustls"], optional = true }
# Same rustls line already resolved via the S3 SDK's stack; used directly to build the `ClientConfig`
# suppaftp's `RustlsConnector` wraps (system trust roots via `rustls-native-certs`).
rustls = { version = "0.23", optional = true, features = ["ring"] }
rustls-native-certs = { version = "0.8", optional = true }

# --- P5 HTTP(S) destination deps (optional; gated by `dest-http`, DESIGN §22.2) ------------------
# `default-features = false` + `rustls-tls` keeps this off OpenSSL (pure-Rust TLS, Windows/MSVC-clean
# like the rest of this crate); resume streams a sequence of whole-chunk `Vec<u8>` bodies (mirrors
# `dest/s3::{hash_range,RangeBody}`), so no `stream`/`multipart` feature is needed.
reqwest = { version = "0.13", default-features = false, features = ["rustls"], optional = true }

# --- P5 Azure Blob destination deps (optional; gated by `dest-azure`, DESIGN §22.2) --------------
# Legacy `azure-sdk-for-rust` track (0.21 line); `default-features = false` + `enable_reqwest_rustls`/
# `hmac_rust` keeps it pure-Rust (no OpenSSL/C toolchain), like the rest of this crate's TLS story.
# `azurite_workaround` fixes known Azurite-emulator response-parsing quirks (the simulator this
# backend's integration test runs against) at zero cost against real Azure.
azure_storage_blobs = { version = "0.21", default-features = false, features = ["enable_reqwest_rustls", "hmac_rust", "azurite_workaround"], optional = true }
azure_storage = { version = "0.21", default-features = false, features = ["enable_reqwest_rustls", "hmac_rust"], optional = true }
azure_core = { version = "0.21", default-features = false, features = ["enable_reqwest_rustls", "hmac_rust"], optional = true }
# `StreamExt` to consume the Azure SDK's `Pageable`/`ResponseBody` streams so `verify`'s download hashes
# in bounded per-range chunks (NFR-3) instead of buffering the whole blob (already resolved transitively
# via the azure SDK; taken as a direct dep only to use it, gated with `dest-azure`).
futures = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
# `test-util` enables paused-time tests (deterministic bandwidth-throttle assertions, no real sleeps).
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
# Integration tests (`tests/`) implement a fake/failing `Destination` (async-trait), read the
# quarantine `.error.json` sidecar (serde_json), and drive `Instance::run` (CancellationToken).
async-trait = "0.1"
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
# Peak-RSS sampling for the real-S3 streaming-upload memory assertion (tests/s3_real.rs) — proves the
# multipart body streams bounded chunks off disk instead of buffering whole parts in memory.
sysinfo = "0.33"
